<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LengthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/from"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/to"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/et_input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/enter_value"
            android:inputType="number" />

        <TextView
            android:id="@+id/result"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/_0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


                <CheckBox
                    android:id="@+id/meter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meter" />

                <CheckBox
                    android:id="@+id/kilometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kilometer" />

                <CheckBox
                    android:id="@+id/centimeter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/centimeter" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


                <CheckBox
                    android:id="@+id/meter1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meter" />

                <CheckBox
                    android:id="@+id/kilometer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kilometer" />

                <CheckBox
                    android:id="@+id/centimeter1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/centimeter" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/calculate"/>

</LinearLayout>